--- a/CodingDojo6/MainWindow.xaml
+++ b/CodingDojo6/MainWindow.xaml
@@ -8,88 +8,30 @@
          DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
          Title="MainWindow" Height="500" Width="800" 
          >
-    
-    <Window.Resources>
-        <DataTemplate x:Key="LeftLayout">
-            <Border BorderThickness="2" BorderBrush="Black" Width="200" CornerRadius="2">
-                <StackPanel Orientation="Horizontal">
-                    <Image Height="60" Source="{Binding Image}" ></Image>
-                    <Label VerticalAlignment="Center" Margin="5,0" Content="{Binding Description}" ></Label>
-                </StackPanel>
-            </Border>
-        </DataTemplate>
-        <DataTemplate x:Key="SuggestedLayout">
-
-            <StackPanel>
-                <Border BorderBrush="Black" BorderThickness="2" Width="200" CornerRadius="1">
-                    <StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Image Height="60"  Source="{Binding Items/Image}"></Image>
-                            <Label VerticalAlignment="Center" Margin="10" Content="{Binding Description}"></Label>
-
-                        </StackPanel>
-                        <Button Height="20" Width="50" Content="Buy" HorizontalAlignment="Center" Margin="5" Command="{Binding BuyBtnClicked}"></Button>
-                    </StackPanel>
-                </Border>
-            </StackPanel>
-        </DataTemplate>
-    </Window.Resources>
-   
-
-
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <StackPanel Grid.Column="0" Grid.Row="1">
+            <Button Content="Overview" Height="30" Width="40"></Button>
+            <Button Content="My Toys" Height="30" Width="40"></Button>
+        </StackPanel>
 
-        <ListBox ItemsSource="{Binding Items}" SelectedItem="{Binding CurrentItem}" ItemTemplate="{StaticResource LeftLayout}"></ListBox>
-
-        <ItemsControl Grid.Column="1" ItemsSource="{Binding CurrentItem.Items}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Horizontal"></WrapPanel>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <Border BorderBrush="Black" BorderThickness="2" CornerRadius="2" Width="200">
-                            <StackPanel>
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Height="60" Width="30" Margin="3" Source="{Binding Image}"></Image>
-                                    <Label VerticalAlignment="Center" FontSize="20" Margin="5,0" Content="{Binding Description}"></Label>
-                                    <Label VerticalAlignment="Center" FontSize="20" Margin="5,0" Content="{Binding AgeRecomm}"></Label>
-                                </StackPanel>
-                                <Button Content="Buy" Height="20" Width="40" Command="{Binding DataContext.BuyBtnClicked, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                        CommandParameter="{Binding}"></Button>
-                            </StackPanel>
-                        </Border>
-
-                    </StackPanel>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-
-
-        <ListBox Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Cart}">
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal">
-                    </StackPanel>
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Image Height="60" Source="{Binding Image}"></Image>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <Border Grid.Column="1" Grid.Row="1">
+            <ContentControl>
+                <ContentControl.Resources>
+                    <DataTemplate></DataTemplate>
+                    <DataTemplate></DataTemplate>
+                </ContentControl.Resources>
+            </ContentControl>
+        </Border>
+       
     </Grid>
 </Window>
