--- a/CodingDojo6/Views/MessageBar.xaml
+++ b/CodingDojo6/Views/MessageBar.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="60" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Image Source="{Binding Symbol}" Margin="10" ></Image>
