--- a/CodingDojo6/Views/MyToys.xaml
+++ b/CodingDojo6/Views/MyToys.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CodingDojo6.Views"
-             mc:Ignorable="d" 
-            
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d"            
+             d:DesignHeight="300" d:DesignWidth="300" 
+              DataContext="{Binding Source={StaticResource Locator}, Path=MyToys}"
+             >
     <Grid Background="Transparent">
         <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -15,7 +16,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-        <ListBox Grid.ColumnSpan="2" Grid.Row="1" >
+        <ListBox Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding MyToys}" Background="Transparent">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal">
